# mect_1ano

./: .gitignore  README.md
AAD/HAD_T1G6/COD/: flipFlopD.vhd
AAD/aula2/: notass  pratical.ods
AAD/aula3/exercicios/: ex_1.s  ex_1_nop.s  ex_2.s  ex_2_nop.s  ex_3.s  ex_3_fowarding.s  ex_3_fowarding_openDLXFile.cfg  ex_3_nop.s  ex_3_openDLXFile.cfg
AAD/aula4/: sort.s  sort_fowarding.s  sort_nops.s
AAD/aula5/flipFlopD/: flipFlopD.qpf  flipFlopD.qsf  flipFlopD.vwf
AAD/aula5/lRot_8bit/: lRot_8bit.qpf  lRot_8bit.qsf  lRot_8bit.qws
AAD/aula7/: resol.txt
AAD/aula8/: sla.txt  table.ods
AAD/perf-measurements/: perf-meas.xls
AC/Projeto AC/: DCA1_X.txt  DCL1_X.txt  DCP2_X.txt
ASE/ADC_DAC/: CMakeLists.txt
ASE/DoorRFID/: README.md  start.sh
ASE/DoorRFID_Melhoria/: README.md  start.sh
ASE/I2C/: CMakeLists.txt
ASE/SPI/: CMakeLists.txt
ASE/guess_freq/: CMakeLists.txt
CM/Project/: SDN_app.py  acls.yaml  conf_dns.sh  default_route  diretivas.txt  faucet.yaml  faucet_mininet.py  get_ip_dns  stats.py
IC/sndfile-example-bin/: wav_hist  wav_quant
IC/sndfile-example-src/: MID_channel.txt  SIDE_channel.txt  wav_cmp.cpp  wav_hist.cpp  wav_hist.h  wav_quant.h
SD/Assignment3/: deployAndRunN.sh
SD/Assignment_1/: class_exp
SD/Problems/: hanoi_towers.java  palindrome.java
SOTR/LinuxRTServices/: periodicTask.c  pt
SOTR/Project_SOTR/Microcontroller/: CMakeLists.txt  prj.conf
SOTR/Project_SOTR/Microcontroller/src/: tasks.c
SRC/Load_Balancing_Scenario/: LB2s.txt  script.py
SRC/Project_1/: DMZ.txt  FW.txt  LB1s.txt
SRC/Project_2/: view.ipynb
(+376 files in other folders)
